--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "spacex-ship-showcase",
+  "name": "pokedex-the-pokemon-database",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,10 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
+    "@tanstack/react-query": "^5.29.2",
+    "axios": "^1.6.8",
     "flowbite-react": "^0.7.0",
+    "graphql": "^16.8.1",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-intersection-observer": "^9.8.2",
+    "react-query": "^3.39.3",
+    "react-redux": "^9.1.1",
+    "react-visibility-sensor": "^5.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
